Feat: Design Changes Made on website

--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -1,100 +1,138 @@
 {% load static %}
 
 <!-- footer -->
-<footer class="bg-img-gym overlay-cls effect-cls footer-effect">
-    <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/footer.jpg' %}">
-    <div class="dark-layout">
-        <div class="container">
-            <section class="section-b-space border-b">
-                <div class="row footer-theme2">
-                    <div class="col-lg-3">
-                        <div class="footer-title footer-mobile-title">
-                            <h4>about</h4>
+<footer class="footer_section position-relative">
+         <div class="footer_section_wrap sec_top_space_50" style="background-image: url('{% static 'website/images/footer/footer.png' %}')">
+            <div class="container">
+               <div class="footer_top_content d-flex flex-column flex-lg-row justify-content-between align-items-center">
+                  <div class="footer_top_logo">
+                     <a href="index.html"><img src="{% static 'website/images/logo/logo.png' %}" style="height: 100px" alt="image_not_found"></a>
+                  </div>
+                  <div class="footer_top_subs position-relative">
+                     <input class="rounded-pill" type="search" name="search" placeholder="Your Phone Number">
+                     <a href="#!"><button type="button" class="btn custom_btn rounded-pill text-white position-absolute">Subscribe Now <i class="fas fa-long-arrow-alt-right"></i></button></a>
+                  </div>
+                  <div class="footer_top_social">
+                     <ul class="list-unstyled d-flex justify-content-end">
+                        <li class="me-3"><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                        <li class="me-3"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="me-3"><a href="#!"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="#!"><i class="fab fa-google-plus-g"></i></a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="footer_inner_content sec_space_xs_70">
+                  <div class="footer_inner_content_wrap">
+                     <div class="row">
+                        <div class="col-md-6 col-lg-3">
+                           <div class="footer_inner_choose_content">
+                              <div class="footer_inner_choose_title">
+                                 <h4>
+                                    <a href="#!" class="text-white">Why People Like us</a>
+                                 </h4>
+                              </div>
+                              <div class="footer_inner_choose_desc pt-2">
+                                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    ex ea
+                                    commodo. Build your online store with WooCommerce the most popular </p>
+                              </div>
+                              <div class="footer_inner_choose">
+                                 <a href="#!"><button type="button" class="btn custom_btn rounded-pill px-4 text-white">View More <i class="fas fa-long-arrow-alt-right"></i></button></a>
+                              </div>
+                           </div>
                         </div>
-                        <div class="footer-contant">
-                            <div class="footer-logo">
-                                <img alt="" height="150" src="{% static 'website/logo.png' %}">
-                            </div>
-                            <p>Ecommerce site is a market where you can buy quality Products </p>
+                        <div class="col-md-6 col-lg-3">
+                           <div class="footer_inner_info_content">
+                              <div class="footer_inner_info_title">
+                                 <h4>
+                                    <a href="#!" class="text-white">Information</a>
+                                 </h4>
+                              </div>
+                              <div class="footer_inner_info_item pt-2">
+                                 <ul class="list-unstyled">
+                                    <li><a href="#!">About Us</a></li>
+                                    <li><a href="#!">Delivery Information</a></li>
+                                    <li><a href="#!">Privacy Policy</a></li>
+                                    <li><a href="#!">Terms &amp; Conditions</a></li>
+                                    <li><a href="#!">Return Policy</a></li>
+                                 </ul>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 subscribe-wrapper">
-                        <div class="subscribe-block">
-                            <h2>newsletter</h2>
-                            <form>
-                                <div class="form-group">
-                                    <input class="form-control" id="exampleFormControlInput3"
-                                           placeholder="Enter your email"
-                                           type="text">
-                                    <button class="btn btn-solid " type="submit">subscribe</button>
-                                </div>
-                            </form>
+                        <div class="col-md-6 col-lg-3">
+                           <div class="footer_inner_acct_content">
+                              <div class="footer_inner_acct_title">
+                                 <h4>
+                                    <a href="#!" class="text-white">My Account</a>
+                                 </h4>
+                              </div>
+                              <div class="footer_inner_acct_item pt-2">
+                                 <ul class="list-unstyled">
+                                    <li><a href="#!">My Account</a></li>
+                                    <li><a href="#!">Shopping Cart</a></li>
+                                    <li><a href="#!">Wishlist</a></li>
+                                    <li><a href="#!">Order History</a></li>
+                                    <li><a href="#!">International Orders</a></li>
+                                 </ul>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3 mt-4">
-                        <div class="footer-title">
-                            <h4>store information</h4>
+                        <div class="col-md-6 col-lg-3">
+                           <div class="footer_inner_cotc_content">
+                              <div class="footer_inner_ctc_title">
+                                 <h4>
+                                    <a href="#!" class="text-white">Contact Us</a>
+                                 </h4>
+                              </div>
+                              <div class="footer_inner_ctc_info pt-2 text-white">
+                                 <p>Address: <font>1429 Netus Rd, NY 48247</font>
+                                 </p>
+                                 <p>Email: <font>Organi@gmail.com</font>
+                                 </p>
+                                 <p>Phone: <font>(+87) 4886-4174</font>
+                                 </p>
+                                 <div class="footer_inner_payment_ctc">
+                                    <div class="footer_inner_payment_title">
+                                       <h5 class="text-white">Payment Accepted</h5>
+                                    </div>
+                                    <div class="footer_inner_payment_thumb pt-3">
+                                       <a href="#!"><img src="{% static 'website/images/payment/payment.png' %}" alt="image_not_found"></a>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                        <div class="footer-contant">
-                            <ul class="contact-details">
-                                <li>Ecommerce Site</li>
-                                General Inqueries: help@ecommerce.com<br>
-                            </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="footer_bootom_content">
+                  <div class="footer_bootom_wrap">
+                     <div class="container">
+                        <div class="row">
+                           <div class="col-md-6">
+                              <div class="footer_bootom_copyright">
+                                 <p>Copyright © 2022 <font>ORGANI</font> Inc. All rights reserved.</p>
+                              </div>
+                           </div>
+                           <div class="col-md-6">
+                              <div class="footer_bootom_privicy_cont d-flex justify-content-center align-items-center">
+                                 <div class="footer_bootom_privicy pe-5">
+                                    <a href="#!">
+                                       <p class="priv position-relative">Privacy Policy</p>
+                                    </a>
+                                 </div>
+                                 <div class="footer_bootom_terms pe-5">
+                                    <p class="position-relative">Terms of Use</p>
+                                 </div>
+                                 <div class="footer_bootom_refunds">
+                                    <p>Sales and Refunds</p>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-    <div class="dark-layout">
-        <div class="container">
-            <section class="small-section">
-                <div class="row footer-theme2">
-                    <div class="col p-set">
-                        <div class="footer-link">
-                            <div class="footer-title">
-                            </div>
-                            <div class="footer-contant">
-                                <ul>
-                                    <li><a href="{% url 'website:privacy' %}">Privacy Policy</a></li>
-                                    <li><a href="#">Cookie Policy</a></li>
-                                    <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="#">Return Policy</a></li>
-                                    <li><a href="#">Shipping Policy</a></li>
-                                    <li><a href="#">Jobs</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-    <div class="sub-footer darker-subfooter">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-6 col-md-6 col-sm-12">
-                    <div class="footer-end">
-                        <p><i aria-hidden="true" class="fa fa-copyright"></i> All Rights reserved - &copy; copyright
-                            2023 - {% now 'Y' %} - Developed and Designed by Haziq Ismail
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-md-6 col-sm-12">
-                    <div class="payment-card-bottom">
-                        <ul>
-
-                            <li>
-                                <a href="#"><img alt="" class="mb-4"
-                                                 height="100px"
-                                                 src="{% static 'website/bg/pay.png' %}"></a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-</footer>
-<!-- end footer -->
+         </div>
+      </footer><!-- end footer -->
