--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -3,240 +3,69 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Mirrored from jthemes.net/themes/html/organic/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 24 Mar 2024 21:46:39 GMT -->
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    {% block seo %}
-        <meta name="description" content="novel marketplace">
-        <meta name="keywords" content="monogatari, novelsm marketplace, ecommerce">
-        <meta name="author" content="exarth">
-    {% endblock %}
-
-    <link rel="icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
-    <link rel="shortcut icon" href="{% static 'website/logos/logo-light.png' %}" type="image/x-icon"/>
-
-    {% block title %}
-        <title>
-            Monogatari |
-            {% block subtitle %}
-                Home
-            {% endblock %}
-        </title>
-    {% endblock %}
-
-    <!--Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
-
-    <!-- Icons -->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/font-awesome.css' %}">
-
-    <!--Slick slider css-->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/slick.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/slick-theme.css' %}">
-
-    <!-- Animate icon -->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/animate.css' %}">
-
-    <!-- Themify icon -->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/themify-icons.css' %}">
-
-    <!-- Bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/vendors/bootstrap.css' %}">
-
-    <!-- Theme css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'website/css/style.css' %}">
+    <title>Dry Fruit</title>
+    <link rel="shortcut icon" href="{% static 'website/images/icons/favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+          integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'website/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/aos.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/magnific-popup.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/nice-select.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/slick-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/slick.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/style.css' %}">
 
 
 </head>
 
-<body class="theme-color-1 dark">
-
-
-<div class="loader_skeleton">
-
-    <section class="pt-0 effect-cls">
-        <div class="home-slider">
-            <div class="home"></div>
-        </div>
-    </section>
-    <section class="collection-banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="ldr-bg">
-                        <div class="contain-banner">
-                            <div>
-                                <h4></h4>
-                                <h2></h2>
-                                <h6></h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="ldr-bg">
-                        <div class="contain-banner">
-                            <div>
-                                <h4></h4>
-                                <h2></h2>
-                                <h6></h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="container section-b-space">
-        <div class="row section-t-space">
-            <div class="col-lg-6 offset-lg-3">
-                <div class="product-para">
-                    <p class="first"></p>
-                    <p class="second"></p>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="no-slider center-detail five-product row">
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                    <div class="product-box">
-                        <div class="img-wrapper"></div>
-                        <div class="product-detail">
-                            <h4></h4>
-                            <h5></h5>
-                            <h6></h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<body>
+<!-- body wrap start -->
+<div class="body-wrap overflow-hidden">
+    <!-- back-to-top start -->
+    <div class="backtotop">
+        <a href="#!" class="scroll">
+            <i class="fas fa-arrow-up fw-bold"></i>
+        </a>
     </div>
+    <!-- back-to-top end -->
+
+    <!-- header section start -->
+    {% include 'website/include/header.html' %}
+
+    <!-- main body start -->
+    <main>
+        {% include 'website/include/sidebar.html' %}
+
+
+    {% block content %}
+    {% endblock %}
+
+    </main>
+    {% include 'website/include/footer.html' %}
+    {% include 'website/include/modal.html' %}
+
+
 </div>
-{% include 'website/include/header.html' %}
-
-
-{% block content %}
-
-{% endblock %}
-
-
-{% include 'website/include/footer.html' %}
-
-
-<!-- tap to top -->
-<div class="tap-top">
-    <div>
-        <i class="fa fa-angle-double-up"></i>
-    </div>
-</div>
-<!-- tap to top end -->
-
-
-<!-- latest jquery-->
-<script src="{% static 'website/js/jquery-3.3.1.min.js' %}"></script>
-
-<!-- fly cart ui jquery-->
-<script src="{% static 'website/js/jquery-ui.min.js' %}"></script>
-
-<!-- slick js-->
-<script src="{% static 'website/js/slick.js' %}"></script>
-
-<!-- menu js-->
-<script src="{% static 'website/js/menu.js' %}"></script>
-
-<!-- lazyload js-->
-<script src="{% static 'website/js/lazysizes.min.js' %}"></script>
-
-<!-- Bootstrap js-->
+<!-- body wrap end -->
+<script src="{% static 'website/js/jquery.min.js' %}"></script>
 <script src="{% static 'website/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'website/js/aos.js' %}"></script>
+<script src="{% static 'website/js/magnific-popup.min.js' %}"></script>
+<script src="{% static 'website/js/nice-select.min.js' %}"></script>
+<script src="{% static 'website/js/countdown.min.js' %}"></script>
+<script src="{% static 'website/js/slick.min.js' %}"></script>
+<script src="{% static 'website/js/custom.js' %}"></script>
 
-<!-- Bootstrap Notification js-->
-<script src="{% static 'website/js/bootstrap-notify.min.js' %}"></script>
+</body>
 
-<!-- Fly cart js-->
-<script src="{% static 'website/js/fly-cart.js' %}"></script>
-
-<!-- Timer js-->
-<!-- Theme js-->
-<script src="{% static 'website/js/theme-setting.js' %}"></script>
-<script src="{% static 'website/js/script.js' %}"></script>
-{% include 'website/messages.html' %}
-
-
-
-</body>/
 </html>
